Confiraciones y adaptadores en relacion a Profile